--- a/名词解释.md
+++ b/名词解释.md
@@ -7,3 +7,8 @@
 - 隐马尔科夫模型：
 - 支持向量机：
 - 势函数：
+- 边缘：边界与目标假设之间的距离。
+- 散列：在N个问题中，能找到每一个假设h将正例和负例分开。
+- vc维：可以被H散列的点的最大数量被称为H的vc维，vc维是度量H的学习能力。
+- 指导噪声：标记的数据点错误，把正例标记成负例，或者正负颠倒。
+- 方差：随机变量与其均值的偏离程度。
