--- a/吴恩达机器学习笔记.md
+++ b/吴恩达机器学习笔记.md
@@ -9,3 +9,7 @@
 - 梯度下降是为了能够找出代价函数最小的位置，既代价函数中的局部最小值
 - 代价函数是由多个微分组成
 - 在计算方程时，可以利用矩阵计算来优化
+- 可以使用特征缩放来解决某些范围值过大的特征值
+- 可以使用正规方程来直接求出最小值
+- 梯度下降的特点1.需要选择合适的学习速率。2.需要多次迭代。3.当特征很多时使用梯度下降很有效。
+- 正规方程的特点1.不需要设置学习速率。2.不需要迭代。3.在特征较多的时候会不太适用。
