--- a/吴恩达机器学习笔记.md
+++ b/吴恩达机器学习笔记.md
@@ -13,3 +13,5 @@
 - 可以使用正规方程来直接求出最小值
 - 梯度下降的特点1.需要选择合适的学习速率。2.需要多次迭代。3.当特征很多时使用梯度下降很有效。
 - 正规方程的特点1.不需要设置学习速率。2.不需要迭代。3.在特征较多的时候会不太适用。
+- 当特征值太多时，线性回归和逻辑回归都有可能出现过拟合的现象。
+- 解决过拟合的方法1.尽量减少选取的变量的数量。2.使用正则化，既加入正则化来对目标函数进行惩罚。
